--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +17,92 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.add-form {
+  margin-bottom: 40px;
+}
+.form-control {
+  margin: 20px 0;
+  background-color: red;
+  color:#fff;
+}
+.form-control label {
+  display: block;
+  text-align: center;
+}
+.form-control input {
+  width: 70%;
+  height: 40px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+.form-control input:focus {
+  outline: 0;
+}
+.btn {
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+}
+.btn:focus {
+  outline: none;
+  color: white;
+}
+.btn-block {
+  width: 20%;
+  height: 40px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+
+.task {
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+.textBold {
+  font-weight: bold;
+}
+.delIcon {
+  color: red;
+  cursor: pointer;
+}
+.editIcon {
+  color: blue;
+  cursor: pointer;
+} 
+
+.tasklist{
+  list-style-type: none;  
+ 
+ 
+}
+
+ul {  
+  list-style-type: none;  
+ 
+  }  
+
+  .table-style{
+    width: 100%;
+  }
+
+  table,
+  th,
+  td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      padding: 5px;
+  }
+
+  td:nth-child(odd) {
+      background-color: #8F9AA5;
+  }
