--- a/src/index.css
+++ b/src/index.css
@@ -28,13 +28,17 @@ code {
 .form-control label {
   display: block;
   text-align: center;
+  margin-bottom: 5px;
 }
 .form-control input {
   width: 70%;
-  height: 40px;
+  height: 20px;
   padding: 3px 7px;
   font-size: 17px;
 }
+
+
+
 .form-control input:focus {
   outline: 0;
 }
@@ -43,7 +47,6 @@ code {
   color: #fff;
   border: none;
   padding: 10px 20px;
-  border-radius: 5px;
   cursor: pointer;
   text-decoration: none;
 }
@@ -53,9 +56,19 @@ code {
 }
 .btn-block {
   width: 20%;
-  height: 40px;
+  height: 30px;
   padding: 3px 7px;
   font-size: 17px;
+  margin-bottom: 10px;
+}
+.btn-block-cancel {
+  width: 5%;
+  height: 30px;
+  padding: 3px 7px;
+  font-size: 17px;
+  margin-bottom: 10px;
+  text-align: center;
+  margin-left: 2px;
 }
 
 
@@ -103,6 +116,6 @@ ul {
       padding: 5px;
   }
 
-  td:nth-child(odd) {
+  tr:nth-child(odd) {
       background-color: #8F9AA5;
   }
